--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "sail-cheri-riscv"]
 	path = riscv-implementations/sail-cheri-riscv
 	url = https://github.com/CTSRD-CHERI/sail-cheri-riscv.git
+[submodule "riscv-implementations/ibex"]
+	path = riscv-implementations/ibex
+	url = https://github.com/jrrk/ibex.git
